<resources>
    <string name="app_name">LetnGo</string>
    <string name="newsfeed">Wishlist</string>
    <string name="categories">Categories</string>
    <string name="explore">Explore</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="welcome">WELCOME</string>
    <string name="travelers">Travelers</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="search_elements">Search Elements</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="start_exploring_start">Start by exploring stays or Experiences. Applying filters such as public homes, private locations, preferred host language, and various amenities available to narrow your options</string>
    <string name="away_from_your">away from your next</string>
    <string name="getaway">getaway</string>
    <string name="one_start_exploring">1. Start exploring</string>
    <string name="two_payment_process">2. Payment Process</string>
    <string name="payment_process_once">Once you\'ve found what you\'re looking for, you may proceed to the payment process. However, we suggest you learn first about the host, location, and recent feedback and get the details regarding cancellation options</string>
    <string name="three_booking">3. Booking</string>
    <string name="booking_you_are_all">You\'re all set! Connect with your host through the application for local tips, questions, or advice, in addition, you may also contact Let N\' Go anytime for any inquiries regarding your booking.</string>
    <string name="you_are_three">You are 3 Steps</string>
    <string name="contact">Contact us</string>
    <string name="wherever_you">Wherever you go,</string>
    <string name="we_are_here">we\'re here to help</string>
    <string name="health_and_safety">Health and safety is a priority</string>
    <string name="health_and_safety_is">Hosts are committing to enhanced COVID-19 cleaning protocols, and listings are rated for cleanliness</string>
    <string name="more_cancellation_options_hosts">Hosts can offer a range of flexible cancellation options which are clearly stated at booking.</string>
    <string name="more_cancellation_options">More cancellation options</string>
    <string name="support_anytime_with">With 24/7 global customer support we\'re there for you whenever you need assistance</string>
    <string name="support_anytime">Support anytime, day or night</string>
    <string name="need_to_get">Need to get in touch?</string>
    <string name="our_support_team">Our Support team is spread across the globe to give you an answer faster.</string>
    <string name="finish_booking">Finish Booking</string>
    <string name="payment">Payment</string>
    <string name="add_payment">Add payment</string>
    <string name="gcash_payment">GCash Payment</string>
    <string name="mercado_bella">Mercado, Bella</string>
    <string name="bllmrcd0913_gmail_com">bllmrcd0913@gmail.com</string>
    <string name="_63_951_9589527">+63 951 9589527</string>
    <string name="check_in">Check In</string>
    <string name="sat_28_may">Sat 28 May</string>
    <string name="check_out">Check Out</string>
    <string name="sun_29_may">Sun 29 May</string>
    <string name="rooms_1">Rooms:1</string>
    <string name="max_guest_2">Max Guest: 2</string>
    <string name="let_n_go_hotel_cebu_multiple_use_hotel">Let\' n Go Hotel Cebu - Multiple Use Hotel</string>
    <string name="php_7_500">PHP 7,500</string>
    <string name="includes_taxes_and_charges">includes taxes and charges</string>
    <string name="free_cancellation_until_12_00_am_28_may">Free cancellation until 12:00 am 28 May</string>
    <string name="your_booking_is_with_let_n_go_hotel_cebu_multiple_use_hotel_facilitated_by_by_our_partner_company">Your booking is with Let; n Go Hotel Cebu- Multiple Use Hotel, Facilitated by by our partner company.</string>
    <string name="by_completing_this_booking_you_agree_to_the_booking_conditions_general_terms_and_privacy_policy">By completing this booking you agree to the booking conditions, general terms, and privacy policy.</string>
    <string name="letn_go_com_s_role_is_solely_provide_the_platform_between_the_relevant_travel_company_and_the_customer">Letn\'Go.com\'s role is solely provide the platform between the relevant travel company and the customer.</string>
    <string name="letn_go_com_s_customer_service_support_will_be_available_to_you_for_this_booking">Letn\'Go.com\'s customer service support will be available to you for this booking</string>
    <string name="book_now">Book Now</string>
    <string name="direct_to_the_owner">Direct to the owner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email" />
    <string name="guest">Guest</string>
    <string name="account_settings">Account Settings</string>
    <string name="timeline">Timeline</string>
    <string name="personal_information">Personal Information</string>
    <string name="payments_and_payout">Payments and Payout</string>
    <string name="notifications">Notifications</string>
    <string name="hosting">Hosting</string>
    <string name="list_your_space">List your Space</string>
    <string name="host_an_experience">Host an Experience</string>
    <string name="web_client_id" translatable="false">1079858573691-agsp0s4o4b3lftsisptgqr500nqqa87m.apps.googleusercontent.com</string>
    <string-array name="country">
        <item>   </item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Canada</item>

    </string-array>
    <string name="title_activity_guest_message">GuestMessage</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search">Search</string>
    <string name="island">Island</string>
    <string name="countryside">Countryside</string>
    <string name="cabin">Cabin</string>
    <string name="caves">Caves</string>
    <string name="camping">Camping</string>
    <string name="beach">Beach</string>
    <string name="treehouse">Treehouse</string>
    <string name="welcome_travelers">Welcome Travelers</string>
    <string-array name="government_id">
        <item>Unified Multi Purpose Identification Card</item>
        <item>Employee ID</item>
        <item>Drivers License</item>
        <item>Professional Regulation Commission ID</item>
        <item>Passport</item>
        <item>SSS ID</item>
        <item>Government Service Insurance System Card</item>
        <item>Overseas Workers Welfare Administration</item>
    </string-array>
    <string name="title_activity_user_homepage">UserHomepage</string>
    <string name="homepage_19">Homepage - 19</string>
    <string name="homepage_20">Homepage - 20</string>
    <string name="homepage_21">Homepage - 21</string>
    <string name="homepage_22">Homepage - 22</string>
    <string name="homepage_23">Homepage - 23</string>
    <string name="homepage_24">Homepage - 24</string>
    <string name="letngologo">letngologo</string>
    <string name="smalllogo">smalllogo</string>
    <string name="choose_you_stay">Choose you stay</string>
    <string name="_28_may_29_may">28 May - 29 May</string>
    <string name="roundbtn">roundbtn</string>
    <string name="dropdown">dropdownbtn</string>
    <string name="breakfast_included">Breakfast Included</string>
    <string name="from_6_april_2022_your_chosen_cancellation_policy_will_apply_regardless_of_corona_virus">from 6 april 2022 your chosen cancellation policy will apply regardless of corona virus</string>
    <string name="security">Security</string>
    <string name="setting_up_extra_security">Setting Up Extra Security</string>
    <string name="get_alerts">Get alerts about unrecognized logins.</string>
    <string name="login_alerts">Login Alerts</string>
    <string name="alert_message">If you get an alert from unfamiliar location or browser, you\'ll be able to reset your password and secure your account.</string>
    <string name="email">Email</string>
    <string name="off">Off</string>
    <string name="login">Login Alerts</string>
    <string name="login_message1">Choose whether you want to get email alerts.</string>
    <string name="get_email">Get email alert at Sample@gmail.com</string>
    <string name="save">Save</string>
    <string name="enter_password">Enter Password</string>
    <string name="for_security">For security, please re-enter your password to continue.</string>
    <string name="continue_1">Continue</string>
    <string name="find_location">FInd Location</string>
    <string name="san_pablo_sison_surigao_del_norte">San Pablo, Sison Surigao del Norte</string>
    <string-array name="kind_of_place_description">
        <item>Apartment</item>
        <item>House</item>
        <item>Secondary Unit</item>
        <item>Unique Space</item>
        <item>Bed and Breakfast</item>
        <item>Boutique Hotel</item>
    </string-array>
    <string-array name="place_description">
        <item>Home</item>
        <item>Cabin</item>
        <item>Villa</item>
        <item>Town House</item>
    </string-array>
    <string-array name="space_description">
        <item>An Entire Place</item>
        <item>A Private Room</item>
        <item>A Shared Room</item>
    </string-array>
    <string name="title_activity_notif_settings1">notif_settings!</string>
    <string name="safety_center">Safety Center</string>
    <string name="get_the_support">Get the support, tools, and information you need to be safe</string>
    <string name="call_local">Call local emergency services</string>
    <string name="you_should_not_spy">You should not spy on other people. The cameras are not allowed in your listing unless they are previously disclosed and visible, these are never permitted in private rooms such as bathrooms or sleeping areas. Do not access others’ accounts without authorization or violate others’ privacy, copyrights etc.</string>
    <string name="travel_safety_tips">Travel safety tips</string>
    <string name="search_book_with_confidence"><![CDATA[Search & book with confidence]]></string>
    <string name="keeping_yourself_your_payment">Keeping yourself, your payment and your personal information are protected by staying on our secured platform throughout the entire process from communication, to booking and payment. You should not provide credit card information in another platform to avoid getting scammed.</string>
    <string name="get_the_phone_numbers">Get the phone numbers you need if someone is in danger or injured.</string>
    <string name="the_let_n_go_community">The Let n’Go community members share their homes, neighborhoods, and experiences. If you’re opening your home as a host or experiencing a host’s hospitality as a guest, you need to feel safe and secured to trust anyone. We ask of you to respect others’ property, information, and personal properties.</string>
    <string name="theft_vandalism_or_extortion">Theft, vandalism, or extortion</string>
</resources>