<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_GuestNewsfeed"
        android:icon="@drawable/ic_fave"
        android:title="@string/newsfeed"/>

    <item
        android:id="@+id/fragmentCategories2"
        android:icon="@drawable/nav_categories"
        android:title="@string/categories"/>

    <item
        android:id="@+id/fragmentExplore"
        android:icon="@drawable/nav_explore"
        android:title="@string/explore"/>

    <item
        android:id="@+id/fragment_GuestNotification"
        android:icon="@drawable/nav_notification"
        android:title="@string/notification"/>

    <item
        android:id="@+id/fragment_GuestAccount"
        android:icon="@drawable/nav_profile"
        android:title="@string/account"/>

</menu>