<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment_homepage23"
    android:background="#DDDDDD"
    android:backgroundTint="#DDDDDD">


    <RelativeLayout
        android:id="@+id/rl_headerLayerOne"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeaderOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:padding="40dp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_letNGoLogo"
            android:layout_width="44dp"
            android:layout_height="45dp"
            android:layout_marginStart="350dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/letngologo" />

        <ImageView
            android:id="@+id/btn_backButtonPaymentDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundbtn"
            android:clickable="true"
            android:src="@drawable/arrow_back" />



        <TextView
            android:id="@+id/tv_finishBooking"
            android:layout_width="192dp"
            android:layout_height="31dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/finish_booking"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/btn_greyBtnOne"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/graybtn" />

        <ImageButton
            android:id="@+id/btn_greyBtnTwo"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/graybtn" />

        <ImageButton
            android:id="@+id/btn_greyBtnThree"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/roundbtn" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="710dp"
            android:layout_marginTop="78dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="104dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/payment"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/add" />

                <TextView
                    android:id="@+id/textView53"
                    android:layout_width="38dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="40dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/add_payment"
                    android:textColor="@color/black"
                    android:textSize="9sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="35dp"
                    app:srcCompat="@drawable/gcash" />

                <TextView
                    android:id="@+id/textView55"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="60dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/gcash_payment"
                    android:textColor="@color/black"
                    android:textSize="8sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="205dp"
                    android:layout_marginTop="32dp"
                    android:drawableLeft="@drawable/person" />

                <TextView
                    android:id="@+id/textView56"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="185dp"
                    android:layout_marginTop="60dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/direct_to_the_owner"
                    android:textColor="@color/black"
                    android:textSize="8sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            // Middle Section (Payment)//

            <RelativeLayout
                android:id="@+id/rectanglewhite"
                android:layout_width="match_parent"
                android:layout_height="327dp"
                android:layout_marginTop="105dp"
                android:background="@drawable/rectangle_white"
                android:textSize="16sp">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/mercado_bella"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/bllmrcd0913_gmail_com"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/contactNo."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/_63_951_9589527"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="70dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/textView63"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="75dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/let_n_go_hotel_cebu_multiple_use_hotel"
                    android:textColor="#658B6F"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/checkIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="120dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/check_in"
                    android:textColor="#658B6F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/checkInDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="143dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/sat_28_may"
                    android:textColor="#658B6F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider6"
                    android:layout_width="1dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="200dp"
                    android:layout_marginTop="105dp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/checkOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="240dp"
                    android:layout_marginTop="120dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/check_out"
                    android:textColor="#658B6F"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/checkOutDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="240dp"
                    android:layout_marginTop="143dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/sun_29_may"
                    android:textColor="#658B6F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/no.Rooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="195dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/rooms_1"
                    android:textColor="#658B6F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/max_guest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="195dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/max_guest_2"
                    android:textColor="#658B6F"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="230dp"
                    android:background="@color/black" />

                //Receipt Information//

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="240dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/php_7_500"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView71"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="270dp"
                    android:text="@string/includes_taxes_and_charges"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView72"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="290dp"
                    android:text="@string/free_cancellation_until_12_00_am_28_may"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </RelativeLayout>

            //Reminders//

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="432dp" >

                <TextView
                    android:id="@+id/textView73"
                    android:layout_width="388dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/your_booking_is_with_let_n_go_hotel_cebu_multiple_use_hotel_facilitated_by_by_our_partner_company"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView74"
                    android:layout_width="378dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/by_completing_this_booking_you_agree_to_the_booking_conditions_general_terms_and_privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView75"
                    android:layout_width="388dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/letn_go_com_s_role_is_solely_provide_the_platform_between_the_relevant_travel_company_and_the_customer"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView76"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="115dp"
                    android:text="@string/letn_go_com_s_customer_service_support_will_be_available_to_you_for_this_booking"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

        // Total prices of the booking//

        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:layout_marginTop="790dp">

            //Lower Header//

            <RelativeLayout
                android:id="@+id/layoutHeader2"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:background="@drawable/rectangle">

                <TextView
                    android:id="@+id/tv_tolalPrice"
                    android:layout_width="192dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/php_7_500"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_bookNow"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="260dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/edit_background"
                    android:fontFamily="sans-serif"
                    android:foregroundTint="#658B6F"
                    android:text="@string/book_now"
                    android:textAllCaps="false"
                    android:textColor="#658B6F"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="45dp"
                    android:text="@string/includes_taxes_and_charges"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
